# pysafet

./: README.md  otraplanificacion  pruebaplanificacion  testplanificacion
pysafet/: .gitignore  README.md
pysafet/PySafet/: .Makefile.swp  Makefile  Makefile.cenditel01  Makefile.custom  (+52 more)
pysafet/websafet/inflow/: .combowidget.cpp.swp  .mainwindow.cpp.swp  CMakeCache.txt  CMakeLists.txt  CertificateWidget.cpp  CertificateWidget.h  DigiDoc.cpp  DigiDoc.h  SafetTextParser.cpp  SafetTextParser.h  SignatureDialog.cpp  SignatureDialog.h  SignatureDialog.ui  TreeWidget.cpp  TreeWidget.h  assistant.cpp  assistant.h  cmake_install.cmake  cmdwidget.cpp  cmdwidget.h  combowidget.cpp  combowidget.cpp.backup  combowidget.h  combowidget.h.backup  configdialog.cpp  configdialog.h  dataBaseConfig.ui  databaseconfigdialog.cpp  databaseconfigdialog.h  datetimewidget.cpp  datetimewidget.h  dialogflowparameters.cpp  dialogflowparameters.h  dialogflowparameters.ui  docksbmenu.cpp  docksbmenu.h  domitem.cpp  domitem.h  dommodel.cpp  dommodel.h  (+84 more)
pysafet/websafet/inflow/documentation/: about.txt  acciones.html  agregarInformacionTrac.html  browse.html  consultas.html  filedialog.html  findfile.html  firmaDocumento.html  index.html  inflowDoc.qhc  inflowDoc.qhcp  inflowDoc.qhp  interfazGrafica.html  intro.html  leame.txt  openfile.html  safet-acceso-salida.html  safet-archivo-de-configuracion.html  safet-barra-de-herramienta.html  safet-barra-de-pestana-modulo.html  safet-cuadro-de-edicion.html  safet-documentacion-certificado-digital.html  safet-documentacion-estampillado-de-tiempo.html  safet-documentacion-firma-electronica.html  safet-documentacion-flujo-de-trabajo.html  safet-documentacion-verificacion-estampillado-de-tiempo.html  safet-documentacion-verificar-firma-electronica.html  safet-documentacion.html  safet-glosario-de-termino.html  safet-instalacion.html  safet-interfaz-grafica.html  safet-introduccion.html  safet-menu-inteligente.html  safet-modulo-agregar-modificar-informacion.html  safet-modulo-firmar-verificar-documento.html  safet-modulo-realizar-consultas.html  safet-modulo-salir.html  safet-operacion-agregar-ticket.html  safet-operacion-agregar-wiki.html  safet-operacion-borrar.html  (+12 more)
pysafet/websafet/inflow/forms/: miforma.ui
pysafet/websafet/inflow/resources/: wordlist.txt  wordlist.txt.backup.cpp
pysafet/websafet/inflow/ui/: SignatureDialog.ui  getsigndocumentdialog.cpp  getsigndocumentdialog.h  getsigndocumentdialog.ui  inflowopciones.h  inflowopciones.ui  logindialog.ui  sendsigndocumentdialog.cpp  sendsigndocumentdialog.h  sendsigndocumentdialog.ui
pysafet/websafet/inflow/xml/: deflista.xml  deftickets.xml  deftrac.xml  ejemplo.xml  entrada.xml
(+373 files in other folders)
